--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html>
 <head>
     <title>Mouse Light Dashboard Pipeline Worker</title>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/latest/css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="http://netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap-glyphicons.css" >
+    <link rel="stylesheet" type="text/css" href="yeti.bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="main.css">
 </head>
 <body>
