--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <title>Mouse Light Dashboard Pipeline Worker</title>
     <link rel="stylesheet" type="text/css" href="http://netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap-glyphicons.css" >
-    <link rel="stylesheet" type="text/css" href="yeti.bootstrap.min.css">
-    <link rel="stylesheet" type="text/css" href="main.css">
+    <link rel="stylesheet" type="text/css" href="public/yeti.bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="public/main.css">
 </head>
 <body>
 <div id='root'>
