More options to remote completed tasks.  Better statistics display, and access to reset mutation.

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <title>Mouse Light Dashboard Pipeline Worker</title>
     <link rel="stylesheet" type="text/css" href="http://netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap-glyphicons.css" >
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" type="text/css" href="public/yeti.bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="public/main.css">
 </head>
